--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,9 @@
     <script src="js/Chart.min.js"></script>
     <script src="js/angular-chart.min.js"></script>
 
+    <!-- ngStorage -->
+    <script src="lib/ngstorage/ngStorage.min.js"></script>
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
